--- a/app/src/main/res/layout/play_item_end.xml
+++ b/app/src/main/res/layout/play_item_end.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:orientation="vertical">
 
@@ -33,11 +33,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:gravity="right"
             android:text="更多>" />
     </LinearLayout>
+
+    <include
+        layout="@layout/item_cut"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -134,9 +139,11 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/new_add" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
@@ -230,32 +237,37 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_margin="5dp"
-                android:layout_below="@id/play_end_news"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/play_end_news"
+                android:layout_margin="5dp"
                 android:orientation="horizontal">
-                <ImageView
-                    android:src="@drawable/group_location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
 
+                <ImageView
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:layout_gravity="center_vertical"
-                    android:text="郑州大学"
-                    android:gravity="center"
+                    android:src="@drawable/group_location" />
+
+                <TextView
                     android:id="@+id/play_group_location"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_marginLeft="10dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
+                    android:layout_margin="5dp"
+                    android:gravity="center"
+                    android:text="郑州大学"
+                    android:textSize="10sp" />
 
-                    android:text="1 km"
+                <TextView
                     android:id="@+id/play_group_distance"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:text="1 km"
+                    android:textSize="10sp" />
             </LinearLayout>
         </RelativeLayout>
 
