--- a/app/src/main/res/layout/play_item_top.xml
+++ b/app/src/main/res/layout/play_item_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="2dp"
     android:orientation="vertical">
@@ -34,11 +34,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
             android:gravity="right"
             android:text="更多>" />
     </LinearLayout>
+
+    <include
+        layout="@layout/item_cut"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -58,7 +63,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="3dp"
+                android:layout_margin="5dp"
                 android:src="@drawable/test_user" />
 
             <LinearLayout
@@ -68,10 +73,10 @@
                 android:orientation="vertical">
 
                 <TextView
-
                     android:id="@+id/play_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:gravity="center"
                     android:text="瓜皮老师"
                     android:textColor="#000" />
@@ -95,9 +100,10 @@
 
             <ImageView
                 android:id="@+id/play_user_share"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 android:layout_gravity="right"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 android:src="@drawable/life_share" />
 
@@ -108,8 +114,9 @@
                 android:layout_weight="1">
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_weight="1"
                     android:src="@drawable/prise" />
 
@@ -124,8 +131,8 @@
                     android:text="110" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_marginLeft="10dp"
                     android:layout_weight="1"
                     android:src="@drawable/comment" />
@@ -168,7 +175,8 @@
         <ImageView
             android:id="@+id/play_news_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:src="@drawable/life_beautiful_girl" />
     </LinearLayout>
