--- a/app/src/main/res/layout/school_news_comments_title.xml
+++ b/app/src/main/res/layout/school_news_comments_title.xml
@@ -23,7 +23,7 @@
     </LinearLayout>
 
     <LinearLayout
-
+        android:id="@+id/school_news_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="2">
@@ -37,6 +37,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/school_news_share"
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
