--- a/app/src/main/res/layout/taoyu_activity.xml
+++ b/app/src/main/res/layout/taoyu_activity.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 
     <include
         android:id="@+id/id_ly_bottombar"
@@ -9,16 +11,24 @@
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_alignParentBottom="true" />
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
-        android:id="@+id/id_taoyuactivity"
+    <include
+        layout="@layout/taoyu_type_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/id_ly_bottombar" />
+        android:layout_height="70dp"
+        />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <FrameLayout
+            android:id="@+id/id_taoyuactivity"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/id_ly_bottombar" />
+
+    </LinearLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:layout_width="30dp"
         android:layout_height="wrap_content"
@@ -26,5 +36,6 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="15dp"
         android:src="@drawable/taoyu_pub" />
+
 
 </LinearLayout>
