--- a/app/src/main/res/layout/taoyu_title.xml
+++ b/app/src/main/res/layout/taoyu_title.xml
@@ -20,7 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="6"
-        android:gravity="center">
+        android:gravity="center"
+       >
         <TextView
 
             android:layout_width="wrap_content"
@@ -28,6 +29,19 @@
             android:layout_marginRight="40dp"
             android:text="淘渔"
             android:textSize="20dp"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_weight="1">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="搜索"
+            android:id="@+id/taoyu_activity_search"
+            />
     </LinearLayout>
 
 
