--- a/app/src/main/res/layout/play_group.xml
+++ b/app/src/main/res/layout/play_group.xml
@@ -10,15 +10,15 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_weight="4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="4"
             android:orientation="vertical">
 
             <RelativeLayout
-                android:layout_weight="2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="2">
 
                 <ImageView
                     android:id="@+id/back_activity"
@@ -38,10 +38,10 @@
             </RelativeLayout>
 
             <LinearLayout
-                android:layout_weight="4"
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:layout_marginTop="1dp">
+                android:layout_marginTop="1dp"
+                android:layout_weight="4">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -54,7 +54,7 @@
                         <ImageView
                             android:id="@+id/group_image"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="fill_parent"
                             android:src="@drawable/group_act_img" />
                     </LinearLayout>
 
@@ -77,32 +77,32 @@
 
                         <TextView
                             android:id="@+id/group_name1"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="篮球对对碰"
-                            android:textColor="#fff"
-                            android:textSize="13sp" />
+                            android:textColor="#e6237b"
+                            android:textSize="14sp" />
 
                         <TextView
                             android:id="@+id/group_number"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="0dp"
                             android:layout_weight="1"
                             android:gravity="center"
                             android:text="1111111"
-                            android:textColor="#fff"
-                            android:textSize="12sp" />
+                            android:textColor="#ef2360"
+                            android:textSize="13sp" />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
+                android:layout_weight="2"
                 android:orientation="vertical">
 
                 <TextView
@@ -129,9 +129,9 @@
             android:layout_height="1dp" />
 
         <LinearLayout
-            android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <LinearLayout
@@ -157,11 +157,11 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="1"
                 android:id="@+id/group_users"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <com.gjf.lovezzu.view.CircleImageView
@@ -207,22 +207,22 @@
             android:layout_height="10dp" />
 
         <LinearLayout
-            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_marginLeft="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="8dp"
                     android:text="群空间"
                     android:textSize="12.5sp" />
 
@@ -237,7 +237,6 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_weight="2"
                 android:id="@+id/group_space"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -319,10 +318,10 @@
             android:layout_height="10dp" />
 
         <LinearLayout
-            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <TextView
@@ -353,15 +352,15 @@
             android:layout_height="10dp" />
 
         <LinearLayout
-            android:layout_weight="3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="3"
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_weight="3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="3"
                 android:orientation="vertical">
 
                 <TextView
@@ -386,6 +385,8 @@
                         android:src="@drawable/test_person_03" />
 
                     <LinearLayout
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="10dp"
@@ -432,10 +433,10 @@
                 android:layout_height="1dp" />
 
             <LinearLayout
-                android:layout_weight="1"
-                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -445,10 +446,10 @@
                     android:textSize="12.5sp" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/group_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="郑州大学北校区"
                     android:textSize="11sp" />
             </LinearLayout>
@@ -459,10 +460,10 @@
                 android:layout_height="1dp" />
 
             <LinearLayout
-                android:layout_weight="1"
-                android:layout_margin="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -472,10 +473,10 @@
                     android:textSize="12.5sp" />
 
                 <TextView
-                    android:layout_marginTop="5dp"
                     android:id="@+id/group_other_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:text="创建时间。。。"
                     android:textSize="11sp" />
             </LinearLayout>
@@ -487,10 +488,10 @@
 
             <TextView
                 android:id="@+id/group_join"
-                android:layout_weight="2"
                 android:layout_width="match_parent"
                 android:layout_height="25dp"
                 android:layout_margin="5dp"
+                android:layout_weight="2"
                 android:background="#287bf7"
                 android:gravity="center"
                 android:text="加入群组"
