--- a/app/src/main/res/layout/play_school.xml
+++ b/app/src/main/res/layout/play_school.xml
@@ -10,34 +10,37 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="5dp"
             android:id="@+id/school_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="5dp"
             android:src="@drawable/fragment_back" />
 
         <TextView
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_gravity="center_vertical"
             android:gravity="center"
             android:text="热门活动" />
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_weight="15"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="15">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <LinearLayout
-                android:padding="10dp"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -92,14 +95,16 @@
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:orientation="horizontal">
+
         <LinearLayout
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical">
+
             <include layout="@layout/school_news_comments_title" />
         </LinearLayout>
 
